stablehlo/stablehlo/tests/vhlo_to_version_invalid_target_empty.mlir
// RUN: stablehlo-opt --vhlo-to-version --verify-diagnostics %s
// expected-error @-2 {{No target version specified. Specify target using: --vhlo-to-version='target=[targetVersion]'}}
